hello-tomcat/k8s/service1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-tomcat
    template: hello-tomcat
  name: hello-tomcat
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: hello-tomcat
  sessionAffinity: None
  type: ClusterIP
