hello-tomcat/k8s/service2.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The service for tomcat cluster membership.
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    app: hello-tomcat
    template: hello-tomcat
  name: hello-tomcat-ping
spec:
  clusterIP: None
  ports:
  - name: 8888-tcp
    port: 8888
    protocol: TCP
    targetPort: 8888
  - name: 4000-tcp
    port: 4000
    protocol: TCP
    targetPort: 4000
  publishNotReadyAddresses: false
  selector:
    app: hello-tomcat
