hello-tomcat/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-tomcat
    template: hello-tomcat
  name: hello-tomcat
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: hello-tomcat
    weight: 100
  wildcardPolicy: None
